<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/settings"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mvp_image" />

        <TextView
            android:id="@+id/titleOfPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_match"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/bottomBannerImage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/navigationButtonsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mvp_image" />

    <ImageView
        android:id="@+id/bottomBannerImage2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/mvp_image" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sport_buttons_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/bottomBannerImage2"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/football_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@drawable/sport_active_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/football"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/hockey_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/hockey"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/basketball_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/basketball"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tennis_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/tennis"
            android:textColor="@color/black" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bottomBannerImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/navigationButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/goToLiveContainer"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/goToLiveImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:foreground="@color/inactive_page_button"
                android:src="@drawable/mvp_image">
            </ImageView>
            <TextView
                android:id="@+id/goToLiveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@color/inactive_page_button"
                android:text="@string/live"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/goToPreMatchContainer"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/goToPreMatchImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:foreground="@color/inactive_page_button"
                android:src="@drawable/mvp_image">
            </ImageView>
            <TextView
                android:id="@+id/goToPreMatchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@color/inactive_page_button"
                android:text="@string/pre_match"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/goToTheLastContainer"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/goToTheLastImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:foreground="@color/inactive_page_button"
                android:src="@drawable/mvp_image">
            </ImageView>
            <TextView
                android:id="@+id/goToTheLastText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@color/inactive_page_button"
                android:text="@string/the_last"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/goToNewsContainer"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/goToNewsImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:foreground="@color/inactive_page_button"
                android:src="@drawable/mvp_image">
            </ImageView>
            <TextView
                android:id="@+id/goToNewsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@color/inactive_page_button"
                android:text="@string/news"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingData"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottomBannerImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>